<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activity_bg"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_update"
        android:gravity="center"
        android:paddingLeft="@dimen/content_padding"
        android:paddingRight="@dimen/content_padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="@dimen/font_size_20"
            android:text="@string/error_header_no_internet" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:textSize="@dimen/font_size_16"
            android:text="@string/error_text_no_internet" />
    </LinearLayout>

    <Button
        android:id="@+id/button_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/Theme.7reporting.Button.Action"
        android:text="@string/error_button_update" />
</RelativeLayout>
